# minllvm

./: CMakeLists.txt  README.md
include/: Block.h  Container.h  Function.h  Module.h
test/errors/: CMakeLists.txt  insert_duplicated_element.cpp  insert_duplicated_tag.cpp  insert_to_inexistent_predecessor.cpp  remove_inexistent_element.cpp
test/invalid_function/: CMakeLists.txt  empty_function.cpp  inexistent_entry_block.cpp  unreacheable_block.cpp
test/valid_function/: CMakeLists.txt  valid_0.cpp  valid_1.cpp
