add_executable(insert_duplicated_element insert_duplicated_element.cpp)
add_executable(insert_duplicated_tag insert_duplicated_tag.cpp)
add_executable(remove_inexistent_element remove_inexistent_element.cpp)
add_executable(insert_to_inexistent_predecessor
               insert_to_inexistent_predecessor.cpp)
